[package]
name = "player-list"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcdps = { git = "https://github.com/zerthox/arcdps-bindings", features = ["extras"], rev = "0.15.1" }
once_cell = "1.18.0"
toml = "0.7.6"
windows = { version = "0.56.0", features = ["System"] }

[lib]
crate-type = ["cdylib"]
